# file-compression-tool

./: .gitignore  README.md  create_report.py  pyproject.toml  requirements.txt  setup.py
compression/: __init__.py  compressor.py  gui.py  main.py
tests/: test_compressor.py
