[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-compression-tool"
version = "0.1.0"
authors = [
    { name="Ahmet Sevinç", email="example@example.com" },
]
description = "A file compression tool with PyQt5 GUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.11",
    "pytest>=7.3.1",
    "coverage>=7.2.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
] 